--- a/escola/templates/cadastros/_importar_alunos_content.html
+++ b/escola/templates/cadastros/_importar_alunos_content.html
@@ -1,4 +1,4 @@
-﻿<h2>Importar Alunos via Arquivo</h2>
+<h2>Importar Alunos via Arquivo</h2>
 
 <div class="info-box">
     <div class="info-header">
