--- a/escola/templates/disciplinar/listar_rfo.html
+++ b/escola/templates/disciplinar/listar_rfo.html
@@ -1,4 +1,4 @@
-﻿{% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 
 <h2>Tratamento da Falta Disciplinar (Relatórios de Fato Observado)</h2>
