--- a/escola/templates/formularios/atas_list.html
+++ b/escola/templates/formularios/atas_list.html
@@ -1,7 +1,7 @@
-﻿{% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 
-<h2>Formulários » ATA</h2>
+<h2>Formulários › ATA</h2>
 
 <div style="margin-bottom: 16px;">
   <a href="{{ url_for('formularios_ata_bp.nova_ata') }}" class="button btn-primary">
@@ -18,9 +18,9 @@
         <tr>
           <th>ID</th>
           <th>ALUNO</th>
-          <th>SÉRIE/TURMA</th>
-          <th>NÚMERO</th>
-          <th>AÇÕES</th>
+          <th>Série/Turma</th>
+          <th>Número</th>
+          <th>Ações</th>
         </tr>
       </thead>
       <tbody>
