--- a/escola/templates/login.html
+++ b/escola/templates/login.html
@@ -37,6 +37,8 @@
         <div class="login-footer">
             <p>Primeiro acesso? Use as credenciais padrão:</p>
             <div class="default-credentials">
+                <p><strong>Usuário:</strong> admin_ti</p>
+                <p><strong>Senha:</strong> admin123</p>
             </div>
         </div>
     </div>
