--- a/escola/templates/cadastros/_adicionar_aluno_content.html
+++ b/escola/templates/cadastros/_adicionar_aluno_content.html
@@ -1,4 +1,4 @@
-﻿<h2>Adicionar Novo Aluno</h2>
+<h2>Adicionar Novo Aluno</h2>
 
 <form method="POST" id="form-cadastro-aluno" class="form-aluno">
     
