--- a/escola/templates/cadastros/bimestres_form.html
+++ b/escola/templates/cadastros/bimestres_form.html
@@ -4,7 +4,10 @@
 <div class="main-content-inner">
   <h2>{% if ano %}Editar{% else %}Criar{% endif %} Bimestres</h2>
 
-  <form method="post" class="form-horizontal">
+  <form method="post"
+        action="{% if ano %}{{ url_for('bimestres_bp.gerenciar_bimestres', ano=ano, iframe=1) }}{% else %}{{ url_for('bimestres_bp.gerenciar_bimestres', iframe=1) }}{% endif %}"
+        class="form-horizontal">
+    <input type="hidden" name="iframe" value="1" />
     <div class="form-group">
       <label for="ano">Ano</label>
       <input type="number" id="ano" name="ano" class="form-control" value="{{ ano or '' }}" required min="2000" max="2100">
@@ -29,7 +32,7 @@
 
     <div style="margin-top:20px;">
       <button type="submit" class="btn btn-success">Salvar Bimestres</button>
-      <a class="btn btn-secondary" href="{{ url_for('bimestres_bp.listar_bimestres') }}">Cancelar</a>
+      <a class="btn btn-secondary" href="{{ url_for('bimestres_bp.listar_bimestres', iframe=1) }}">Cancelar</a>
     </div>
   </form>
 </div>
